# reliable_sync

./: .gitignore  README.md  all.vsdx  主体逻辑分析.xlsx  代码说明.docx  测试记录.pptx  项目说明.docx
master/: CMakeLists.txt  checksum.cpp  event.cpp  event.h  instantList.cpp  instantList.h  list.cpp  list.h  log.h  macro.h  main.cpp  newCfg.cpp  newCfg.h  protocol.h  queue.cpp  queue.h  recv.cpp  recv.h  send.cpp  send.h  socket.cpp  sync.cpp  sync.h  timer.cpp  timer.h  tool.cpp  waitedList.cpp  waitedList.h
slave/: CMakeLists.txt  checksum.cpp  checksum.h  event.h  instantList.cpp  instantList.h  log.h  macro.h  main.cpp  protocol.h  recv.cpp  recv.h  send.cpp  send.h  socket.h  sync.cpp  sync.h  timer.cpp  timer.h  tool.h  waitedList.cpp  waitedList.h
src/: CMakeLists.txt  checksum.cpp  checksum.h  event.cpp  event.h  instantList.h  list.cpp  list.h  list_data.cpp  list_data.h  list_instant.cpp  list_instant.h  list_slv.cpp  list_slv.h  list_waited.cpp  list_waited.h  log.h  macro.h  main.cpp  master.cpp  master.h  master_procThread.cpp  master_procThread.h  master_recv.cpp  master_recv.h  master_send.cpp  master_send.h  mbufer.cpp  mbufer.h  protocol.h  send.cpp  slave.cpp  slave.h  slave_recv.cpp  slave_recv.h  slave_send.cpp  slave_send.h  socket.cpp  sync.cpp  sync_master.cpp  (+11 more)
